02-Nov-2015 BuildAMation now uses semantic versioning (semver.org) for its version numbers.

30-Oct-2015 Implemented Evaluate method on Publisher.CollatedSymbolicLink module to only make symbolic links when necessary. This will only execute when the symbolic link does not exist.

30-Oct-2015 Implemented Evaluate method on Publisher.CollatedFile module to only copy files when necessary.

30-Oct-2015 Added GccCommon, ClangCommon and MingwCommon ICommonCompilerSettings property: Visibility. These follow the EVisibility enumeration for the respective module, and default to EVisibility.Hidden. This means that only symbols with __attribute__((visibility("default"))) markup in shared objects will be exported. This is equivalent to the __declspec(dllexport) markup for VisualStudio.

30-Oct-2015 Added GccCommon, ClangCommon and MingwCommon ICommonCompilerSettings properties: AllWarnings, ExtraWarnings and Pedantic. These are boolean properties and default to false.

30-Oct-2015 Added Children property override to C.CModuleContainer, honouring the module type stored within the container. This eliminates the need for useful casts while using the enumeration.

30-Oct-2015 Fixes #41. The checks for whether an object file is up-to-date (evaluation) needed to also check whether the source file will be updated in this build, not just whether the timestamps already vary. This resolves object files not rebuilding when source files are procedurally generated.

30-Oct-2015 Adding an explicit module into a C container, now requires that module to be a C.SourceFile or derived from that. This is beneficial when the source is procedurally generated, as it simplifies the steps required. Also cleaned up the mechanism for creating C.SourceFiles when adding to a container by path.
