@@ -39,6 +39,7 @@ namespace C
             this.Macros.Add("OutputName", this.Macros["modulename"]);
             this.Macros.Add("MajorVersion", Bam.Core.TokenizedString.CreateVerbatim("1"));
             this.Macros.Add("MinorVersion", Bam.Core.TokenizedString.CreateVerbatim("0"));
+            this.Macros.Add("PatchVersion", Bam.Core.TokenizedString.CreateVerbatim("0"));
             // default bit depth
             this.BitDepth = (EBit)Bam.Core.CommandLineProcessor.Evaluate(new DefaultBitDepth());
         }
