@@ -53,7 +53,10 @@ namespace ClangCommon
                         commandLine.Add(System.String.Format("-Wl,-dylib_install_name,{0}", osxOpts.InstallName.Parse()));
                     }
 
-                    var version = System.String.Format("{0}.{1}", module.Macros["MajorVersion"].Parse(), module.Macros["MinorVersion"].Parse());
+                    var version = System.String.Format("{0}.{1}.{2}",
+                        module.Macros["MajorVersion"].Parse(),
+                        module.Macros["MinorVersion"].Parse(),
+                        module.Macros["PatchVersion"].Parse());
                     commandLine.Add(System.String.Format("-current_version {0}", version));
                     // TODO: offer an option of setting the compatibility version differently
                     commandLine.Add(System.String.Format("-compatibility_version {0}", version));
